# ans-list-compression

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  ans-byte.hpp  ans-constants.hpp  ans-mag-fast.hpp  ans-mag-pfor.hpp  ans-mag-util.hpp  ans-mag.hpp  ans-op4-adapt.hpp  ans-op4.hpp  ans-op4s.hpp  ans-packed.hpp  ans-pfor.hpp  ans-simple.hpp  ans-test.cpp  ans-u16-op4.hpp  ans-u16-util.hpp  ans-util.hpp  ans-util2.hpp  ans-vbyte-single-adapt.hpp  ans-vbyte-single-badapt.hpp  ans-vbyte-single.hpp  ans-vbyte.hpp  ansutil.hpp  benchmark.cpp  binpackinghelpers.h  bitpacking.h  bits.hpp  compress_qmx.cpp  compress_qmx.h  constants.hpp  cutil.hpp  decode.cpp  encode.cpp  exception_stats.cpp  interp.hpp  methods.hpp  op4.hpp  (+6 more)
data/: test_ans_packed_model.txt
include/: ans-constants.hpp  ans-mag-fast.hpp  ans-mag-small.hpp  ans-mag.hpp  ans-packed.hpp  ans-simple.hpp  ans-util.hpp  ans-vbyte-split.hpp  benchmark.hpp  catch.hpp  methods.hpp  util.hpp  vbyte.hpp
src/: benchmark_cikm.cpp  block_mag_stats.cpp  exception_stats.cpp  non_full_block_costs.cpp  test.cpp
